# TradingBot

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  agents.md  config.sample.yaml  config.yaml  pyproject.toml  readme.md  requirements.txt
app/: __main__.py  cli.py
app/backtest/: __init__.py  backtrader_engine.py  engine.py
app/core/: config.py  io.py  logging.py  registry.py  seeds.py  types.py
app/data/: data_card.py  validation.py  yfinance_adapter.py
app/execution/: simulator.py
app/features/: engineer.py  indicators.py
app/labels/: fixed_horizon.py  leakage.py  triple_barrier.py
app/monitoring/: drift.py  quality.py
app/reporting/: builder.py
app/risk/: manager.py
app/strategies/: breakout.py  ema_crossover.py  mean_revert.py  ml_classifier.py
app/training/: trainer.py
app/tuning/: search.py
app/ui/: api.py  dashboard.py
tests/: test_backtrader_engine.py  test_execution.py  test_indicators.py  test_kpis.py  test_leakage.py
