[project]
name = "day-trading-simulator"
version = "0.1.0"
description = "Simulation-only generational trading research platform"
authors = [{name = "Simulation Bot"}]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
tradebot = "app.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
